--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "react-resizable-panels": "^3.0.5",
         "react-router-dom": "^7.12.0",
         "remark-gfm": "^4.0.0",
+        "resend": "^6.9.2",
         "sonner": "^2.0.7",
         "tailwind-merge": "^2.6.0",
         "vaul": "^1.1.2",
