Fixed Changes and Errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
         "forceConsistentCasingInFileNames": true,
         "paths": {
             "@/api/*": [
-                "./src/server/api/*"
+                "./src/api/*"
             ],
             "@/*": [
                 "./src/*"
