fixed email issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
         "vitest.config.ts",
         "drizzle.config.ts",
         "tailwind.config.ts",
-        "postcss.config.js"
+        "postcss.config.js",
+        "api"
     ]
 }
