--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
             "destination": "/api/$1"
         },
         {
-            "source": "/((?!api/).*)",
+            "source": "/((?!api/|sitemap.xml|robots.txt|favicon.ico).*)",
             "destination": "/index.html"
         }
     ]
