--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
             "destination": "/api/$1"
         },
         {
+            "source": "/(sitemap.xml|robots.txt|favicon.ico)",
+            "destination": "/$1"
+        },
+        {
             "source": "/((?!api/|sitemap.xml|robots.txt|favicon.ico).*)",
             "destination": "/index.html"
         }
